--- a/app/src/main/res/layout-land/activity_setting.xml
+++ b/app/src/main/res/layout-land/activity_setting.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center_horizontal"
+    android:layout_gravity="center"
     android:background="#FAF4E1"
     android:orientation="horizontal"
     tools:context=".SettingActivity">
@@ -25,13 +25,13 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="275dp"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/dm_serif_display"
         android:text="Settings"
         android:textColor="#FF9900"
         android:textSize="50sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -39,7 +39,7 @@
         android:id="@+id/textView1"
         android:layout_width="535dp"
         android:layout_height="65dp"
-        android:layout_marginStart="45dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="28dp"
         android:text="Show Address/Used Num Electric/User Type/Price"
         android:textColor="#FF7A00"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="60dp"
-        android:layout_marginTop="151dp"
+        android:layout_marginTop="164dp"
         android:scaleX="1.5"
         android:scaleY="1.5"
         app:layout_constraintStart_toEndOf="@+id/textView1"
@@ -62,7 +62,7 @@
         android:id="@+id/textView2"
         android:layout_width="535dp"
         android:layout_height="55dp"
-        android:layout_marginStart="45dp"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="14dp"
         android:text="Play music"
         android:textColor="#FF7A00"
