--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -31,8 +31,9 @@
         android:textColor="#FF9900"
         android:textSize="50sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="116dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView1"
@@ -42,8 +43,10 @@
         android:text="Show Address/Used Num Electric/User Type/Price"
         android:textColor="#FF7A00"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="10dp" />
+        app:layout_constraintEnd_toStartOf="@+id/switch_visibility"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Switch
         android:id="@+id/switch_visibility"
@@ -52,8 +55,10 @@
         android:layout_marginTop="209dp"
         android:scaleX="1.5"
         android:scaleY="1.5"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="333dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView1"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
@@ -63,8 +68,10 @@
         android:text="Play music"
         android:textColor="#FF7A00"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView1"
-        tools:layout_editor_absoluteX="10dp" />
+        app:layout_constraintEnd_toStartOf="@+id/switch_music"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
     <Switch
         android:id="@+id/switch_music"
@@ -73,7 +80,9 @@
         android:layout_marginTop="45dp"
         android:scaleX="1.5"
         android:scaleY="1.5"
-        app:layout_constraintTop_toBottomOf="@+id/switch_visibility"
-        tools:layout_editor_absoluteX="333dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/switch_visibility" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
