--- a/app/src/main/res/layout-land/activity_increase_electric_price.xml
+++ b/app/src/main/res/layout-land/activity_increase_electric_price.xml
@@ -97,12 +97,12 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/userTypeTextView"
+                android:id="@+id/priceTextView"
                 android:layout_width="27dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingLeft="20dp"
-                android:text=""
+                android:text="Price"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -133,7 +133,7 @@
         android:id="@+id/textView8"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="55dp"
         android:fontFamily="@font/dm_serif_display"
         android:gravity="center"
         android:text="Increase Electric Price "
@@ -147,7 +147,7 @@
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="140dp"
         android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
