--- a/app/src/main/res/layout-land/activity_main_menu.xml
+++ b/app/src/main/res/layout-land/activity_main_menu.xml
@@ -13,11 +13,13 @@
         android:id="@+id/cardView3"
         android:layout_width="195dp"
         android:layout_height="195dp"
-        android:layout_marginStart="4dp"
         android:backgroundTint="#FFA592"
         app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/cardView4"
-        tools:layout_editor_absoluteY="200dp">
+        app:layout_constraintTop_toBottomOf="@+id/cardView2">
 
         <Button
             android:id="@+id/searchCustomerButton"
@@ -53,11 +55,14 @@
         android:id="@+id/cardView4"
         android:layout_width="195dp"
         android:layout_height="195dp"
-        android:layout_marginStart="70dp"
         android:backgroundTint="#FFCF73"
         app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/cardView3"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        tools:layout_editor_absoluteY="200dp">
+        app:layout_constraintTop_toBottomOf="@+id/cardView">
 
         <Button
             android:id="@+id/updatePriceButton"
@@ -94,11 +99,15 @@
         android:id="@+id/cardView"
         android:layout_width="195dp"
         android:layout_height="195dp"
-        android:layout_marginStart="70dp"
         android:backgroundTint="#93C4FF"
         app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/cardView4"
+        app:layout_constraintEnd_toStartOf="@+id/cardView2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        tools:layout_editor_absoluteY="5dp">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed">
 
         <Button
             android:id="@+id/addCustomerButton"
@@ -134,11 +143,14 @@
         android:id="@+id/cardView2"
         android:layout_width="195dp"
         android:layout_height="195dp"
-        android:layout_marginStart="4dp"
         android:backgroundTint="#8DCE9B"
         app:cardCornerRadius="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/cardView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/cardView"
-        tools:layout_editor_absoluteY="5dp">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed">
 
         <Button
             android:id="@+id/listCustomerButton"
@@ -174,23 +186,25 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="78dp"
+        android:layout_marginStart="76dp"
         android:fontFamily="@font/dm_serif_display"
         android:text="Menu"
         android:textColor="#FF9900"
         android:textSize="70sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="156dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498" />
 
     <ImageView
         android:id="@+id/imageSetting"
         android:layout_width="59dp"
         android:layout_height="55dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:alpha="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_settings_24" />
 
