--- a/app/src/main/res/layout/activity_increase_electric_price.xml
+++ b/app/src/main/res/layout/activity_increase_electric_price.xml
@@ -96,12 +96,12 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/userTypeTextView"
+                android:id="@+id/priceTextView"
                 android:layout_width="27dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:paddingLeft="20dp"
-                android:text=""
+                android:text="Price"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
