--- a/app/src/main/res/layout-land/activity_increase_electric_price.xml
+++ b/app/src/main/res/layout-land/activity_increase_electric_price.xml
@@ -23,12 +23,12 @@
     <LinearLayout
         android:layout_width="355dp"
         android:layout_height="298dp"
-        android:layout_marginStart="350dp"
         android:layout_marginTop="45dp"
+        android:layout_marginEnd="25dp"
         android:background="@drawable/rounded_background"
         android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
